--- a/shell/android-studio/reicast/src/naomi/AndroidManifest.xml
+++ b/shell/android-studio/reicast/src/naomi/AndroidManifest.xml
@@ -3,7 +3,7 @@
         android:name="com.reicast.emulator.Emulator">
 
         <activity
-            android:name="com.reicast.emulator.MainActivity">
+            android:name="com.reicast.emulator.NativeGLActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -62,5 +62,66 @@
                     android:scheme="file" />
             </intent-filter>
         </activity>
+        <activity-alias
+            android:name="com.reicast.emulator.MainActivity"
+            android:targetActivity="com.reicast.emulator.NativeGLActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.LST"
+                    android:scheme="file" />
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.lst"
+                    android:scheme="file" />
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.BIN"
+                    android:scheme="file" />
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.bin"
+                    android:scheme="file" />
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.DAT"
+                    android:scheme="file" />
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.dat"
+                    android:scheme="file" />
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.ZIP"
+                    android:scheme="file" />
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.zip"
+                    android:scheme="file" />
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.7Z"
+                    android:scheme="file" />
+                <data
+                    android:host="*"
+                    android:mimeType="*/*"
+                    android:pathPattern=".*\\.7z"
+                    android:scheme="file" />
+            </intent-filter>
+        </activity-alias>
     </application>
 </manifest>
