Add cmake msvc build to appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,31 +1,50 @@
 version: git-{branch}-{build}
 image: Visual Studio 2017
 
-environment:
-  matrix:
-  - EXTRA_PATH: C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
-    LAUNCH_BUILD: mingw32-make platform=win32
-    LAUNCH_PATH: shell\linux\
+configuration:
+- RelWithDebInfo
+- fast
 
+platform:
+- x64
+
+before_build:
+  - cmd: >-
+      if "%CONFIGURATION%"=="RelWithDebInfo" (set BUILD_PATH=build)
+      
+      if "%CONFIGURATION%"=="fast" (set BUILD_PATH=shell\linux)
+      
+      set EXTRA_PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\mingw64\bin\
+      
+      set PATH=%EXTRA_PATH%;%PATH%
+      
+      if not exist %BUILD_PATH% (mkdir %BUILD_PATH%)
+     
+      if "%CONFIGURATION%"=="RelWithDebInfo" (cmake -B %BUILD_PATH% -G "Visual Studio 15 2017 Win64" -DCMAKE_CONFIGURATION_TYPES=RelWithDebInfo)
+      
+      cd %BUILD_PATH%
+      
 build_script:
-- cmd: >-
-    set PATH=%EXTRA_PATH%;%PATH%
-    
-    cd %LAUNCH_PATH%
-    
-    %LAUNCH_BUILD%
-  
+  - cmd: >-
+      if "%CONFIGURATION%"=="RelWithDebInfo" (msbuild reicast.sln /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll")
+      
+      if "%CONFIGURATION%"=="fast" (mingw32-make platform=win32)
+
 after_build:
-  - cmd: cd ..\..
-  - cmd: mkdir artifacts
-  - cmd: move shell\linux\nosym-reicast.exe artifacts/reicast-win_x64-fast-%APPVEYOR_REPO_COMMIT%.exe
-  - cmd: copy %EXTRA_PATH%\libgcc_s_seh-1.dll artifacts
-  - cmd: copy %EXTRA_PATH%\libwinpthread-1.dll artifacts
-  - cmd: copy %EXTRA_PATH%\libgomp-1.dll artifacts
+  - cmd: >-      
+      if "%CONFIGURATION%"=="RelWithDebInfo" (cd .. && set EXE_PATH=build\RelWithDebInfo\reicast.exe)
+      
+      if "%CONFIGURATION%"=="fast" (cd ..\.. && set EXE_PATH=shell\linux\nosym-reicast.exe)
+      
+      mkdir artifacts
+      
+      move %EXE_PATH% artifacts\reicast-win_%PLATFORM%-%CONFIGURATION%-%APPVEYOR_REPO_COMMIT%.exe
+      
+      if "%CONFIGURATION%"=="fast" (copy %EXTRA_PATH%\libgcc_s_seh-1.dll artifacts && copy %EXTRA_PATH%\libwinpthread-1.dll artifacts && copy %EXTRA_PATH%\libgomp-1.dll artifacts)
 
 artifacts:
   - path: artifacts
-    name: reicast-win_x64-fast-$(APPVEYOR_REPO_COMMIT)
+    name: reicast-win_$(PLATFORM)-$(CONFIGURATION)-$(APPVEYOR_REPO_COMMIT)
 
 deploy:
 - provider: S3
@@ -35,5 +54,5 @@ deploy:
   region: eu-west-1
   bucket: reicast-builds-windows
   folder: 'builds/heads/$(APPVEYOR_REPO_BRANCH)-$(APPVEYOR_REPO_COMMIT)'
-  artifact: reicast-win_x64-fast-$(APPVEYOR_REPO_COMMIT)
+  artifact: reicast-win_$(PLATFORM)-$(CONFIGURATION)-$(APPVEYOR_REPO_COMMIT)
   set_public: true
