--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,7 +1,7 @@
 ---
-format_version: '5'
+format_version: '7'
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
-project_type: ios
+project_type: macos
 trigger_map:
 - push_branch: "*"
   workflow: primary
@@ -10,45 +10,45 @@ trigger_map:
 workflows:
   deploy:
     steps:
-    - activate-ssh-key@3.1.1:
+    - activate-ssh-key@4.0.3:
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4.0.11: {}
+    - git-clone@4.0.14: {}
     - cache-pull@2.0.1: {}
     - script@1.1.5:
         title: Do anything with Script step
-    - certificate-and-profile-installer@1.9.3: {}
+    - certificate-and-profile-installer@1.10.1: {}
     - recreate-user-schemes@1.0.2:
         inputs:
         - project_path: "$BITRISE_PROJECT_PATH"
-    - xcode-archive@2.4.8:
+    - xcode-archive-mac@1.6.2:
         inputs:
         - project_path: "$BITRISE_PROJECT_PATH"
         - scheme: "$BITRISE_SCHEME"
         - export_method: "$BITRISE_EXPORT_METHOD"
-    - deploy-to-bitrise-io@1.3.12: {}
-    - cache-push@2.0.5: {}
+    - deploy-to-bitrise-io@1.3.19: {}
+    - cache-push@2.1.1: {}
   primary:
     steps:
-    - activate-ssh-key@3.1.1:
+    - activate-ssh-key@4.0.3:
         run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
-    - git-clone@4.0.11: {}
+    - git-clone@4.0.14: {}
     - cache-pull@2.0.1: {}
     - script@1.1.5:
         title: Do anything with Script step
-    - certificate-and-profile-installer@1.9.2: {}
+    - certificate-and-profile-installer@1.10.1: {}
     - recreate-user-schemes@1.0.2:
         inputs:
         - project_path: "$BITRISE_PROJECT_PATH"
-    - deploy-to-bitrise-io@1.3.10: {}
-    - cache-push@2.0.5: {}
+    - deploy-to-bitrise-io@1.3.19: {}
+    - cache-push@2.1.1: {}
 app:
   envs:
   - opts:
       is_expand: false
-    BITRISE_PROJECT_PATH: shell/apple/emulator-ios/reicast-ios.xcodeproj
+    BITRISE_PROJECT_PATH: shell/apple/reicast.xcworkspace
   - opts:
       is_expand: false
-    BITRISE_SCHEME: reicast-ios
+    BITRISE_SCHEME: reicast-osx
   - opts:
       is_expand: false
-    BITRISE_EXPORT_METHOD: ad-hoc
+    BITRISE_EXPORT_METHOD: none
