--- a/bitrise.yml
+++ b/bitrise.yml
@@ -23,7 +23,7 @@ workflows:
         - content: |
             #!/bin/bash
             envman add --key GIT_HASH --value `git log --pretty=format:'%h' -n 1`
-            envman add --key GIT_BUILD --value `git describe --all --always`-$GIT_HASH
+            envman add --key GIT_BUILD --value `git describe --all --always | sed 's/remotes\/origin/heads/'`-$GIT_HASH
     - certificate-and-profile-installer@1.10.1: {}
     - recreate-user-schemes@1.0.2:
         inputs:
@@ -56,7 +56,7 @@ workflows:
         - content: |
             #!/bin/bash
             envman add --key GIT_HASH --value `git log --pretty=format:'%h' -n 1`
-            envman add --key GIT_BUILD --value `git describe --all --always`-$GIT_HASH
+            envman add --key GIT_BUILD --value `git describe --all --always | sed 's/remotes\/origin/heads/'`-$GIT_HASH
     - certificate-and-profile-installer@1.10.1: {}
     - recreate-user-schemes@1.0.2:
         inputs:
