appveyor and bitrise fixes

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,8 +48,7 @@ artifacts:
 deploy:
 - provider: S3
   access_key_id: AKIAJOZQS4H2PHQWYFCA
-  secret_access_key:
-    secure: $S3_SECRET_KEY
+  secret_access_key: $S3_SECRET_KEY
   bucket: flycast-builds
   folder: 'builds/heads/$(APPVEYOR_REPO_BRANCH)-$(APPVEYOR_REPO_COMMIT)'
   artifact: reicast-win_$(PLATFORM)-$(CONFIGURATION)-$(APPVEYOR_REPO_COMMIT)
