--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,7 +48,8 @@ artifacts:
 deploy:
 - provider: S3
   access_key_id: AKIAJOZQS4H2PHQWYFCA
-  secret_access_key: $S3_SECRET_KEY
+  secret_access_key:
+    secure: Y/QobuGrBsa137sbi9a+UnvSLqpWITTCp5yFTgDJ4i1Gduyi9V7i/g3zLZ4s2J7d
   bucket: flycast-builds
   folder: 'builds/heads/$(APPVEYOR_REPO_BRANCH)-$(APPVEYOR_REPO_COMMIT)'
   artifact: reicast-win_$(PLATFORM)-$(CONFIGURATION)-$(APPVEYOR_REPO_COMMIT)
