osx: bigger window. travis: public_read for S3

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ deploy:
   bucket: flycast-builds
   local-dir: artifacts
   upload-dir: android
+  acl: public_read
   skip_cleanup: true
   on:
     all_branches: true
