wercker: fix S3 path

--- a/wercker.yml
+++ b/wercker.yml
@@ -14,16 +14,15 @@ build:
         - script:
             name: package app
             code: |
-              S3_DIR=linux/heads/$WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
-              mkdir -p $S3_DIR
+              mkdir s3
               pushd shell/linux
               mv -f nosym-reicast.elf reicast
               gzip reicast
               popd
-              mv shell/linux/reicast.gz $S3_DIR
+              mv shell/linux/reicast.gz s3
         - s3sync:
-            source_dir: linux/heads/$WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
+            source_dir: s3
             delete-removed: false
-            bucket-url: s3://flycast-builds
+            bucket-url: s3://flycast-builds/linux/heads/$WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
             key-id: AKIAJOZQS4H2PHQWYFCA
             key-secret: $S3_SECRET_KEY
