wercker: missing slash

--- a/wercker.yml
+++ b/wercker.yml
@@ -23,6 +23,6 @@ build:
         - s3sync:
             source_dir: s3
             delete-removed: false
-            bucket-url: s3://flycast-builds/linux/heads/$WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT
+            bucket-url: s3://flycast-builds/linux/heads/$WERCKER_GIT_BRANCH-$WERCKER_GIT_COMMIT/
             key-id: AKIAJOZQS4H2PHQWYFCA
             key-secret: $S3_SECRET_KEY
