--- a/.travis.yml
+++ b/.travis.yml
@@ -45,8 +45,8 @@ script:
 before_deploy:
 - cd ../../
 - mkdir -p artifacts/$GIT_BUILD/
-- cp shell/android-studio/reicast/build/outputs/apk/dreamcast/debug/reicast-dreamcast-debug.apk artifacts/$GIT_BUILD/reicast-debug-$GIT_HASH.apk
-- cp shell/android-studio/reicast/build/outputs/apk/naomi/debug/reicast-naomi-debug.apk artifacts/$GIT_BUILD/reicast-naomi-debug-$GIT_HASH.apk
+- cp shell/android-studio/reicast/build/outputs/apk/dreamcast/debug/reicast-dreamcast-debug.apk artifacts/$GIT_BUILD/flycast-debug-$GIT_HASH.apk
+- cp shell/android-studio/reicast/build/outputs/apk/naomi/debug/reicast-naomi-debug.apk artifacts/$GIT_BUILD/flycast-naomi-debug-$GIT_HASH.apk
 deploy:
   provider: s3
   access_key_id: AKIAJOZQS4H2PHQWYFCA
@@ -59,5 +59,5 @@ deploy:
   skip_cleanup: true
   on:
     all_branches: true
-repo: flyinghead/reicast-emulator
+repo: flyinghead/flycast
 
